src/index.css
@import url("https://fonts.googleapis.com/css2?family=Amiko:wght@400;600;700&display=swap");

:root {
  --page-margin-lr: 12em;
  --page-margin-t: 2em;

  --global-padding-xs: 0.5em;
  --global-padding-sm: 1em;
  --global-padding-md: 2em;

  --global-gap-sm: 1em;
  --global-gap-md: 2em;
  --global-gap-lg: 3em;

  --global-border-radius-sm: 1em;
  --global-pill: 50vh;
  --global-border-circle: 50%;

  --global-font-family: "Amiko", Arial, sans-serif;

  color-scheme: light dark;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

html * {
  font-family: var(--global-font-family);
}

/* Reset styles */
h1,
h2,
h3,
h4,
h5,
ul,
li,
p {
  margin: 0;
  padding: 0;
}

button,
select,
form input,
textarea {
  padding: var(--global-padding-sm);
  border-radius: var(--global-pill);
  border: none;
  box-sizing: border-box;
}

select {
  appearance: none;
  cursor: pointer;
}

button {
  cursor: pointer;
}

.custom-select {
  position: relative;
}

.icon-nav-down-arrow {
  position: absolute;
  right: 3%;
  top: 25%;
}

.main-section {
  padding: var(--global-padding-md);
  border-radius: var(--global-border-radius-sm);
}

.main-section-title-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: var(--global-gap-sm);
}

.main-section-subtitle {
  text-align: center;
}

.form-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  gap: var(--global-gap-sm);
}

.form-container__item {
  display: flex;
  flex-direction: column;
}

.framed-box {
  border-radius: var(--global-border-radius-sm);
}

.accordion-container {
  padding: var(--global-padding-md);
}

.accordion-summary {
  position: relative;
  list-style: none;
  cursor: pointer;
}

.accordion-icon {
  position: absolute;
  right: 0;
  top: 50%;
  transform: translateY(-50%);
  transition: 0.5s ease-in;
}

.accordion-container[open] .icon-right-arrow {
  transform: rotate(90deg);
  transition: 0.5s ease-out;
}

.accordion-answer-wrapper {
  padding: var(--global-padding-md) var(--global-padding-md) 0
    var(--global-padding-md);
}

@media (prefers-color-scheme: light) {
  :root {
    --global-border: solid 1px #000;

    --global-orange: #e5380d;
    --global-dark-orange: #ca320c;
    --global-light-grey: #eeeeee;
  }

  html {
    color: #000;
    background-color: #eeeeee;
  }

  a:hover {
    color: #747bff;
  }

  button {
    color: #fff;
    background-color: var(--global-orange);
  }

  button:hover {
    background-color: var(--global-dark-orange);
  }

  input,
  select,
  textarea {
    background-color: var(--global-light-grey);
  }

  input::placeholder {
    color: #6c6c6c;
  }

  textarea::placeholder {
    color: #6c6c6c;
  }

  .framed-box {
    background-color: #fff;
    border: var(--global-border);
  }

  .accordion-container {
    border-bottom: solid 1px lightgray;
  }
}

@media (prefers-color-scheme: dark) {
  :root {
    --global-border: solid 1px #555555;

    --global-orange: #e5380d;
    --global-dark-orange: #ca320c;
    --global-light-grey: #3d3d3d;
    --global-dark-grey: #282828;
  }

  html {
    color: #ffffff;
    background-color: #141414;
  }

  a:hover {
    color: #747bff;
  }

  button {
    color: #fff;
    background-color: var(--global-orange);
  }

  button:hover {
    background-color: var(--global-dark-orange);
  }

  input,
  select,
  textarea {
    background-color: var(--global-light-grey);
  }

  input::placeholder {
    color: #fff;
  }

  textarea::placeholder {
    color: #fff;
  }

  .framed-box {
    background-color: #282828;
    border: var(--global-border);
  }

  .accordion-container {
    border-bottom: var(--global-border);
  }
}

/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 600px) {
  .form-container {
    display: flex;
    flex-direction: column;
    gap: var(--global-gap-sm);
  }
}

/* Small devices (portrait tablets and large phones, 600px and up) */
@media only screen and (min-width: 600px) {
  /* Code */
}

/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) {
  /* Code */
}

/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (min-width: 992px) {
  /* Code */
}

/* Extra large devices (large laptops and desktops, 1200px and up) */
@media only screen and (min-width: 1200px) {
  body {
    margin: var(--page-margin-t) var(--page-margin-lr) 0 var(--page-margin-lr);
  }
}

